<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/small_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="19dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/forecast_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/forecast_icon_description"
            app:srcCompat="@drawable/ic_baseline_cloud_24" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAlignment="textStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temp_celcius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp_celcius"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/min_max_celcius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/min_max_celcius"
                android:textAlignment="textStart"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temp_far"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp_far"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/min_max_far"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/min_max_far"
                android:textAlignment="textStart"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/wind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:scaleX="2"
                android:scaleY="2"
                app:srcCompat="@drawable/ic_wind" />

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed_ms"
                android:textAlignment="textStart" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>