<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:backgroundTint="#FFF"
            android:orientation="vertical"
            android:paddingBottom="19dp"
            android:paddingEnd="19dp"
            android:paddingStart="19dp"
            >

            <TextView
                android:id="@+id/city_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="19dp"
                android:autoSizeTextType="uniform"
                android:ems="10"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/forecast_cards"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="19dp"
                    android:layout_marginBottom="19dp"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="19dp"
                android:autoSizeTextType="uniform"
                android:ems="10"
                android:text="@string/today"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/wind_speed_label"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:ems="10"
                    android:text="@string/wind_speed_ms_label"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/temp_celcius_label"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:ems="10"
                    android:text="@string/temp_celcius_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/temp_celcius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/temp_far_label"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:ems="10"
                    android:text="@string/temp_far_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/temp_far"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/pressure_label"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:ems="10"
                    android:text="@string/pressure_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/humidity_label"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:ems="10"
                    android:text="@string/humidity_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

            </TableRow>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>